test/trivial/bradc/entrypoint/main2.good
main2.chpl:4: error: functions require parentheses
